fix(left-truncate): fix mixin for left truncation

--- a/src/assets/stylesheets/shared/main.scss
+++ b/src/assets/stylesheets/shared/main.scss
@@ -22,6 +22,9 @@ body {
 .truncate {
     @include truncate;
 }
+.left-truncate {
+    @include left-truncate;
+}
 
 .truncate-ellipsis {
     display: table;
